<resources>
    <string name="app_name">AppTestSum</string>
    <string name="hello_johnny">Hello, Johnny!</string>
    <string name="constant_sring">Твой вес сегодня:</string>
    <string name="constant_saveText">СОХРАНИТЬ</string>
    <string name="constant_read_dataText">ПОСМОТРЕТЬ ДАННЫЕ</string>
    <string name="constant_string_2">Напиши тут свой вес</string>
    <string name="data">data</string>
    <string name="normal_not_noral_data">normal_not_data</string>
    <string name="_100_0">100.0</string>
    <string name="x">X</string>
    <string name="sign_in">sign in</string>
    <string name="registration">Registration</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="registration_is_done">Registration is done!</string>
    <string name="ok">OK</string>
    <string name="guest_user">lebedew323@gmail.com</string>
    <string name="logout">logout</string>
    <string name="you_are_logged">You are logged!</string>
    <string name="error">Error! try again.</string>
    <string name="wrong">Wrong mail or password!</string>
    <string name="image">image</string>
</resources>