<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_enter_activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="359dp"
        android:layout_height="321dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/front_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/constant_sring"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/et_dataUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/edit_text_theme"
        android:gravity="center"
        android:hint="@string/constant_string_2"
        android:inputType="number"
        android:textColor="@color/black"
        android:minHeight="48dp"
        android:textColorHint="#BEC5BA"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_theme"
        android:fontFamily="sans-serif-black"
        android:onClick="saveDataClick"
        android:text="@string/constant_saveText"
        android:textColor="#F3F8F2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_dataUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_dataUser"
        app:layout_constraintTop_toBottomOf="@+id/et_dataUser" />

    <Button
        android:id="@+id/btn_read_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_theme"
        android:fontFamily="sans-serif-black"
        android:text="@string/constant_read_dataText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_save"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_save"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />
</androidx.constraintlayout.widget.ConstraintLayout>