<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_enter_activity"
    tools:context=".presentation.ActivityAuthentication">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="270dp"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_splash_screen" />

    <EditText
        android:id="@+id/et_mail"
        android:textColor="#1F201E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_theme"
        android:hint="@string/e_mail"
        android:gravity="center"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#BEC5BA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_password"
        android:autofillHints="password"
        android:gravity="center"
        android:textColor="#1F201E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_theme"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#BEC5BA"
        app:layout_constraintEnd_toEndOf="@+id/et_mail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_mail"
        app:layout_constraintTop_toBottomOf="@+id/et_mail"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:background="@drawable/btn_theme"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_theme"
        android:text="@string/registration"
        android:textSize="30sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_sign"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign" />


</androidx.constraintlayout.widget.ConstraintLayout>